--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 			font: inherit;
 		}
 
+		/*removes white border from canvas */
+		html, body, div, canvas {
+    margin: 0;
+    padding: 0;
+}
+
 		/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 		@media (prefers-reduced-motion: reduce) {
 			html:focus-within {
