--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title><%= htmlWebpackPlugin.options.title %></title>
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<%= htmlWebpackPlugin.tags.headTags %>
 	<style>
 		/* Hide scrollbars */
